--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,177 @@
-streamlit==1.21.0
-numpy==1.24.2
-scikit-learn==1.2.2
-pandas==1.5.3
-sklearn==0.0
-streamlit-option-menu==0.3.2
-plotly==5.14.1
+adal==1.2.7
 altair==4.2.2
+ansi2html==1.8.0
+argcomplete==2.1.2
+asttokens==2.2.1
+attrs==23.1.0
+azure-common==1.1.28
+azure-core==1.26.4
+azure-graphrbac==0.61.1
+azure-mgmt-authorization==3.0.0
+azure-mgmt-containerregistry==10.1.0
+azure-mgmt-core==1.4.0
+azure-mgmt-keyvault==10.2.1
+azure-mgmt-resource==22.0.0
+azure-mgmt-storage==21.0.0
+azureml-core==1.50.0
+backcall==0.2.0
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+bcrypt==4.0.1
+beautifulsoup4==4.12.2
+blinker==1.6.2
+cachetools==5.3.0
+category-encoders==2.6.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+cloudpickle==2.2.1
+colorama==0.4.6
+comm==0.1.3
+contextlib2==21.6.0
+contourpy==1.0.7
+cryptography==40.0.2
+cycler==0.11.0
+Cython==0.29.34
+dash==2.9.3
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+debugpy==1.6.7
+decorator==5.1.1
+Deprecated==1.2.13
+deprecation==2.1.0
+docker==6.0.1
+entrypoints==0.4
+executing==1.2.0
+fastjsonschema==2.16.3
+Flask==2.3.2
+fonttools==4.39.3
+gitdb==4.0.10
+GitPython==3.1.31
+humanfriendly==10.0
+idna==3.4
+imbalanced-learn==0.10.1
+importlib-metadata==6.6.0
+ipykernel==6.22.0
+ipython==8.13.2
+ipywidgets==8.0.6
+isodate==0.6.1
+itsdangerous==2.1.2
+jedi==0.18.2
+jeepney==0.8.0
+Jinja2==3.1.2
+jmespath==1.0.1
+joblib==1.2.0
+jsonpickle==3.0.1
+jsonschema==4.17.3
+jupyter-dash==0.4.2
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+jupyterlab-widgets==3.0.7
+kaleido==0.2.1
+kiwisolver==1.4.4
+knack==0.10.1
+lightgbm==3.3.5
+linkedin-api==2.0.1
+llvmlite==0.40.0
+lxml==4.9.2
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+msal==1.22.0
+msal-extensions==1.0.0
+msrest==0.7.1
+msrestazure==0.6.4
+nbformat==5.8.0
+ndg-httpsclient==0.5.1
+nest-asyncio==1.5.6
+numba==0.57.0
+numpy==1.24.3
+oauthlib==3.2.2
+orjson==3.8.11
+packaging==23.0
+pandas==1.5.3
+paramiko==3.1.0
+parso==0.8.3
+pathspec==0.11.1
+patsy==0.5.3
+pickleshare==0.7.5
+Pillow==9.5.0
+pkginfo==1.9.6
+platformdirs==3.5.0
+plotly==5.14.1
+plotly-resampler==0.8.3.2
+pmdarima==2.0.3
+portalocker==2.7.0
+prompt-toolkit==3.0.38
+protobuf==3.20.3
+psutil==5.9.5
+pure-eval==0.2.2
+pyarrow==11.0.0
+pyasn1==0.5.0
+pycaret==3.0.0
+pycparser==2.21
+pydeck==0.8.1b0
+Pygments==2.15.1
+PyJWT==2.6.0
+Pympler==1.0.1
+PyNaCl==1.5.0
+pyod==1.0.9
+pyOpenSSL==23.1.1
+pyparsing==3.0.9
+pyreadline3==3.4.1
+pyrsistent==0.19.3
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+pywin32==306
+PyYAML==6.0
+pyzmq==25.0.2
+requests==2.28.2
+requests-oauthlib==1.3.1
+retrying==1.3.4
+rich==13.3.4
+schemdraw==0.16
+scikit-base==0.4.3
+scikit-learn==1.2.2
+scikit-plot==0.3.7
+scipy==1.10.1
+seaborn==0.12.2
+SecretStorage==3.3.3
+six==1.16.0
+sktime==0.18.0
+smmap==5.0.0
+soupsieve==2.4.1
+stack-data==0.6.2
+statsmodels==0.14.0
+streamlit==1.21.0
+streamlit-option-menu==0.3.2
+tabulate==0.9.0
+tbats==1.1.3
+tenacity==8.2.2
+threadpoolctl==3.1.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.3.1
+tqdm==4.65.0
+trace-updater==0.0.9.1
+traitlets==5.9.0
+typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==4.3
+urllib3==1.26.15
+validators==0.20.0
+watchdog==3.0.0
+wcwidth==0.2.6
+websocket-client==1.5.1
+Werkzeug==2.3.3
+widgetsnbextension==4.0.7
+wrapt==1.15.0
+xxhash==3.2.0
+yellowbrick==1.5
+zipp==3.15.0
